Fix title being too large on mobile

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -43,6 +43,12 @@
   -webkit-text-stroke: 1px white;
 }
 
+@media (max-width: 768px) {
+  .bannerTitle {
+    font-size: 2rem;
+  }
+}
+
 .mainContainer {
   display: flex;
   flex-direction: column;
